--- a/page_style.css
+++ b/page_style.css
@@ -57,7 +57,7 @@
 /*Style used for the email form*/
 
 .custom-question-form {
-    max-width: 600px;
+    max-width: 90%;
     margin: 20px auto;
     padding: 20px;
     background-color: #f5f5f5;
