- Se han añadido los correos electronicos de los alumnos

--- a/page_style.css
+++ b/page_style.css
@@ -75,6 +75,10 @@
     font-weight: bold;
 }
 
+.custom-question-form .teacheremails {
+    padding-left: 5px;
+}
+
 .custom-question-form input[type="email"],
 .custom-question-form input[type="text"],
 .custom-question-form textarea {
