- Se han arreglado los comentarios de algunos archivos

--- a/page_style.css
+++ b/page_style.css
@@ -14,7 +14,7 @@
 // along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 
 /**
- * Handles sending emails from students to specific teachers.
+ * Handles the css for the new fields and the email form.
  *
  * @package    mod_page
  * @copyright  2024 Nikolay <nikolaypn2002@gmail.com>
