--- a/page_style.css
+++ b/page_style.css
@@ -115,10 +115,17 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    float: right;
 }
 
 .custom-question-form button[type="submit"]:hover {
     background-color: #004494;
+}
+
+.clearfix::after {
+    content: "";
+    clear: both;
+    display: table;
 }
 
 /* Style for the accordion*/
